--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
     </android.support.v4.view.ViewPager>
 
@@ -17,8 +17,9 @@
     <RadioGroup
         android:id="@+id/bottom_tab_group"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_51"
+        android:layout_height="@dimen/dp_61"
         android:layout_gravity="bottom"
+        android:background="@color/bg_white_gray"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -26,29 +27,29 @@
             android:id="@+id/tab_home"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_8"
-            android:layout_marginTop="@dimen/dp_8"
             android:layout_weight="1"
             android:button="@null"
             android:checked="true"
             android:drawableTop="@drawable/tab_home"
             android:gravity="center"
+            android:paddingTop="@dimen/dp_2"
+            android:paddingBottom="@dimen/dp_2"
             android:text="主页"
             android:textColor="@color/tab_text_selector"
-            android:textSize="@dimen/sp_10"/>
+            android:textSize="@dimen/sp_10" />
 
         <RadioButton
             android:id="@+id/tab_mine"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_8"
-            android:layout_marginTop="@dimen/dp_8"
             android:layout_weight="1"
             android:button="@null"
             android:drawableTop="@drawable/tab_mine"
             android:gravity="center"
+            android:paddingTop="@dimen/dp_2"
+            android:paddingBottom="@dimen/dp_2"
             android:text="我的"
             android:textColor="@color/tab_text_selector"
-            android:textSize="@dimen/sp_10"/>
+            android:textSize="@dimen/sp_10" />
     </RadioGroup>
 </LinearLayout>
