--- a/moduleCommon/src/main/res/values/styles.xml
+++ b/moduleCommon/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!--Appbar背景色-->
         <item name="colorPrimary">@color/colorPrimary</item>
         <!--状态栏颜色-->
@@ -15,12 +15,12 @@
         <item name="android:windowEnableSplitTouch">false</item>
 
     </style>
-    <style name="StartAppTheme" parent="AppTheme">
+    <style name="StartAppTheme" parent="AppBaseTheme">
         <item name="android:windowNoTitle">true</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     <!-- Base application theme. -->
-    <style name="BaseAppTheme" parent="AppTheme">
+    <style name="BaseAppTheme" parent="AppBaseTheme">
         <!-- Customize your theme here. -->
         <item name="android:textAllCaps">false</item>
         <item name="windowActionBar">false</item>
@@ -39,7 +39,7 @@
         <item name="android:windowEnableSplitTouch">false</item>
     </style>
 
-    <style name="DialogAppTheme" parent="AppTheme">
+    <style name="DialogAppTheme" parent="AppBaseTheme">
         <!-- Customize your theme here. -->
         <item name="android:textAllCaps">false</item>
         <item name="windowActionBar">false</item>
