--- a/modulehome/src/main/res/layout/activity_home.xml
+++ b/modulehome/src/main/res/layout/activity_home.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <TextView
-        android:id="@+id/tv_text"
+    <include layout="@layout/toolbar" />
+
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.example.modulehome.HomeFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="Hello World! HOME" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
