--- a/moduleuser/src/main/res/layout/activity_user.xml
+++ b/moduleuser/src/main/res/layout/activity_user.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserActivity">
+    android:orientation="vertical"
+    tools:context=".UserActivity"
+    tools:ignore="MissingDefaultResource">
 
-    <TextView
-        android:id="@+id/tv_text"
+    <include layout="@layout/toolbar" />
+
+    <fragment
+        android:id="@+id/user_fragment"
+        android:name="com.example.moduleuser.UserFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="Hello World! USER" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
