--- a/modulehome/src/main/res/layout/fragment_home.xml
+++ b/modulehome/src/main/res/layout/fragment_home.xml
@@ -1,20 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
 
-    <TextView
-        android:clickable="true"
+    >
 
-        android:id="@+id/tv_text"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="Hello World! HOME"
-        tools:ignore="OnClick" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:context=".HomeActivity">
 
-</LinearLayout>
+        <Button
+            android:id="@+id/query_listener_list_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="查询侦听机列表" />
+
+        <Button
+            android:id="@+id/query_flyuav_list_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="查询无人机列表" />
+
+        <Button
+            android:id="@+id/query_fly_history_list_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="查询飞行历史记录" />
+
+        <Button
+            android:id="@+id/pre_imaage_iv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="照片测试" />
+
+        <Button
+            android:id="@+id/tag_Layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="标签测试" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/start_btn"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="开始" />
+
+            <Button
+                android:id="@+id/end_btn"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="停止" />
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:enabled="true"
+                android:focusable="true"
+                android:lineSpacingMultiplier="1"
+                android:longClickable="true"
+                android:padding="@dimen/dp_5"
+                android:text="data"
+                android:textColor="@color/black"
+                android:textIsSelectable="true"
+                android:textSize="@dimen/sp_16"
+                android:visibility="visible" />
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_text"
+            android:layout_width="@dimen/dp_100"
+            android:layout_height="45dp"
+            android:layout_gravity="center"
+            android:background="@color/role_yellow_gray"
+            android:clickable="true"
+            android:gravity="center"
+            android:text="HOME"
+            android:textColor="@color/white"
+            android:visibility="visible"
+            tools:ignore="OnClick" />
+
+        <com.example.modulehome.view.QQStepView
+            android:id="@+id/qqstep_view"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_gravity="center_horizontal" />
+
+
+        <com.example.modulehome.view.ClipRectDemo
+            android:id="@+id/cliprect_view"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_400"
+            android:layout_gravity="center" />
+
+        <com.example.modulehome.view.CustomTestView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_600"
+            android:layout_gravity="center_horizontal" />
+
+        <ImageView
+            android:id="@+id/image_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/qianger_toast"
+            android:visibility="gone" />
+
+
+    </LinearLayout>
+</ScrollView>
+
