--- a/modulehome/src/main/res/layout/fragment_home.xml
+++ b/modulehome/src/main/res/layout/fragment_home.xml
@@ -42,6 +42,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="标签测试" />
+        <Button
+            android:id="@+id/V7_Layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="日历" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -101,6 +106,16 @@
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:layout_gravity="center_horizontal" />
+        <com.example.modulehome.view.CameraCusView
+            android:layout_width="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="@dimen/dp_300"/>
+
+        <com.example.modulehome.view.TipsView
+            android:id="@+id/tipsView_view"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_50"
+            android:layout_gravity="center_horizontal" />
 
 
         <com.example.modulehome.view.ClipRectDemo
@@ -109,10 +124,11 @@
             android:layout_height="@dimen/dp_400"
             android:layout_gravity="center" />
 
-        <com.example.modulehome.view.CustomTestView
+        <com.example.modulehome.view.Sample12CameraRotateFixedView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_600"
-            android:layout_gravity="center_horizontal" />
+            android:layout_height="@dimen/dp_400"
+            android:layout_gravity="center" />
+
 
         <ImageView
             android:id="@+id/image_iv"
