--- a/modulehome/src/main/res/layout/fragment_home.xml
+++ b/modulehome/src/main/res/layout/fragment_home.xml
@@ -42,11 +42,23 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="标签测试" />
+
         <Button
             android:id="@+id/V7_Layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="日历" />
+            android:text="日历\折线图\柱状图" />
+
+        <Button
+            android:id="@+id/map_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="地图迷雾" />
+        <Button
+            android:id="@+id/graff_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="涂鸦" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -98,18 +110,21 @@
             android:gravity="center"
             android:text="HOME"
             android:textColor="@color/white"
-            android:visibility="visible"
+            android:visibility="gone"
             tools:ignore="OnClick" />
 
         <com.example.modulehome.view.QQStepView
             android:id="@+id/qqstep_view"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone" />
+
         <com.example.modulehome.view.CameraCusView
             android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_300"
             android:layout_gravity="center_horizontal"
-            android:layout_height="@dimen/dp_300"/>
+            android:visibility="gone" />
 
         <com.example.modulehome.view.TipsView
             android:id="@+id/tipsView_view"
@@ -122,12 +137,14 @@
             android:id="@+id/cliprect_view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_400"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:visibility="gone" />
 
         <com.example.modulehome.view.Sample12CameraRotateFixedView
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_400"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:visibility="gone" />
 
 
         <ImageView
